--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -9,6 +9,6 @@
         <p id="countdown" style="color:rgb(202, 202, 69); font-size: 36px; max-width: 567px;">Le site changera vers cette page automatiquement dans 120 secondes...</p>
     </div>
     <div id="caregiver-side">
-        <button class="btn" name="caregiver" (click)="check()">Je suis du personnel</button>
+        <button class="btn" data-testid="caregiver-page" name="caregiver" (click)="check()">Je suis du personnel</button>
     </div>
 </div>
