--- a/front-end/src/app/caregiver/user-management/user-management.component.html
+++ b/front-end/src/app/caregiver/user-management/user-management.component.html
@@ -3,11 +3,11 @@
         <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/home">
         <h2>Retour</h2>
     </div>
-    <div class="button-div" routerLink="/user-form">
+    <div class="button-div" data-testid="add-button" routerLink="/user-form">
         <img src="/assets/add.png" alt="add">
         <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Ajouter un utilisateur dans la liste</h3>
     </div>
-    <div class="button-div" routerLink="/theme-editor">
+    <div class="button-div" data-testid="edit-button" routerLink="/theme-editor">
         <img src="/assets/edit.png" alt="edit">
         <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Accéder à l'éditeur de Quiz</h3>
     </div>
@@ -17,10 +17,10 @@
         <option value="lastName">Nom</option>
         <option value="firstName">Prénom</option>
     </select> )</span> </h1>
-<div class="user-list">
+<div class="user-list" data-testid="user-list">
     <div *ngFor="let user of userList" class="user">
         <div *ngIf="user.photo!==''">
-            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/user-stats-menu/{{user.id}}">
+            <img class="user-img" alt="user-img-{{user.firstName}}-{{user.lastName}}" src={{user.photo}} routerLink="/user-stats-menu/{{user.id}}">
         </div>
         <div *ngIf="user.photo===''">
             <img class="user-img" alt="user-img" src="/assets/users/user.png" routerLink="/user-stats-menu/{{user.id}}">
