--- a/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
+++ b/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
@@ -21,7 +21,7 @@
         <h1>Gérer l'utilisateur</h1>
     </div>
     <div routerLink="/user-stats/{{user.firstName}}-{{user.lastName}}">
-        <img src="/assets/stats.png" alt="parameters">
+        <img src="/assets/stats.png" alt="stats">
         <h1>Voir les statistiques</h1>
     </div>
     <div></div>
