refactor: css and html changes to adapt to 1080p screen. #101

--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
@@ -1,6 +1,9 @@
+@import '../../styles.scss';
+
 .user-img {
     max-width: 175px;
     max-height: 175px;
+    border-radius: 50%;
 }
 
 .user-list {
