--- a/front-end/src/app/quizzes/theme-list/theme-list.component.scss
+++ b/front-end/src/app/quizzes/theme-list/theme-list.component.scss
@@ -3,6 +3,7 @@
 #user-img {
     max-width: 150px;
     max-height: 150px;
+    border-radius: 50%;
 }
 
 #back {
@@ -16,5 +17,5 @@
 }
 
 .theme {
-    margin: 50px;
+    margin: 30px;
 }
