--- a/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.scss
+++ b/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.scss
@@ -14,12 +14,14 @@ hr {
 }
 
 #user-img {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 200px;
+    border-radius: 50%;
 }
 
 h2 {
-    color: gray
+    color: gray;
+    font-size: 24px;
 }
 
 #quiz-img {
