--- a/front-end/src/app/caregiver/user-stats/user-stats.component.scss
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.scss
@@ -12,12 +12,15 @@ hr {
 }
 
 #user-img {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
 }
 
 h2 {
-    color: gray
+    color: gray;
+    font-size: 20px;
+    margin:10px;
 }
 
 #quiz-stats {
