--- a/front-end/src/app/users/user-edit/user-edit.component.scss
+++ b/front-end/src/app/users/user-edit/user-edit.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/card.scss';
+@import "../../../styles.scss";
 
 #back {
     margin-top: 10px;
@@ -46,21 +47,22 @@ input {
 }
 
 .user-edit {
-    font-size: 28px;
+    font-size: 20px;
+    margin-left: 100px;
 }
 
 .input-custom {
-    font-size: 28px;
+    font-size: 18px;
 }
 
 .form-text {
     font-weight: bold;
-    margin-right: 10px;
 }
 
 #user-img {
     max-width: 200px;
     max-height: 200px;
+    border-radius: 50%;
 }
 
 .edit-user-button {
@@ -73,6 +75,7 @@ input {
     height: 75px;
     font-size: 24px;
 }
+
 
 .edit-user-button:hover {
     background-color: grey;
