--- a/front-end/src/app/users/user-form/user-form.component.scss
+++ b/front-end/src/app/users/user-form/user-form.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/card.scss';
+@import '../../../styles.scss';
 
 #back {
     margin-top: 10px;
@@ -35,7 +36,7 @@ hr {
     background-color: rgb(199, 199, 199);
     border:0;
     padding: 5px;
-    font-size: 28px;
+    font-size: 18px;
 }
 
 .text-big {
@@ -47,18 +48,19 @@ hr {
 }
 
 .user-form {
-    font-size: 28px;
+    font-size: 20px;
+    margin-left: 100px;
 }
 
 
 .form-text {
     font-weight: bold;
-    margin-right: 10px;
 }
 
 #user-img {
     max-width: 200px;
     max-height: 200px;
+    border-radius: 50%;
 }
 
 .create-user-button {
