test play quiz valerie pentacle

--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -41,5 +41,5 @@
     <h1 style="color: rgb(16, 206, 16)" class="answer-text">Bravo !</h1>
 </div>
 <div style="display: flex; justify-content: center;">
-    <button id="next-question-button" (click)="nextQuestion()">Question Suivante</button>
+    <button id="next-question-button" data-testid="next-question" (click)="nextQuestion()">Question Suivante</button>
 </div>
