--- a/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
+++ b/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
@@ -4,11 +4,11 @@
         <img id="back" src="/assets/back.png" alt="back" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/stats">
         <h2 style="align-self: center;">Retour</h2>
       </div>
-      <div data-testid="user-{{user.firstName}}-{{user.lastName}}">
+      <div>
         <img id="user-img" alt="user-img-{{user.firstName}}-{{user.lastName}}" src="{{user.photo}}">
         <h1>{{user.firstName}} {{user.lastName}}</h1>
       </div>
-      <div data-testid="quiz-{{quiz.name}}">
+      <div>
         <img id="quiz-img" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img-{{quiz.name}}">
         <h4 style="align-self:center; margin-right: 10px;">{{quiz.name}}</h4>
       </div>
