refactor: adapting associations and questions screens to 1080p screen. #101

--- a/front-end/src/app/caregiver/user-management/user-management.component.html
+++ b/front-end/src/app/caregiver/user-management/user-management.component.html
@@ -4,15 +4,15 @@
         <h2>Retour</h2>
     </div>
     <div id="selectable" class="button-div" routerLink="/user-form">
-        <img src="/assets/add.png" alt="add">
+        <img style="width:100px; height:100px" src="/assets/add.png" alt="add">
         <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Ajouter un utilisateur dans la liste</h3>
     </div>
     <div id="selectable" class="button-div" (click)="inputNewPassword()">
-        <img src="/assets/edit.png" alt="edit">
+        <img style="width:100px; height:100px" src="/assets/edit.png" alt="edit">
         <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Modifier mot de passe</h3>
     </div>
     <div id="selectable" class="button-div" routerLink="/theme-editor">
-        <img src="/assets/edit.png" alt="edit">
+        <img style="width:100px; height:100px" src="/assets/edit.png" alt="edit">
         <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Accéder à l'éditeur de Quiz</h3>
     </div>
 
