--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -7,11 +7,11 @@
                 <span style="margin: 0; font-size: 20px;">Question {{numQuestion}}/{{quiz.questions.length + quiz.associations.length}}</span>
             </div>
         </div>
-        <div *ngIf="numQuestion <= quiz.questions.length && assistance % 10 >= 1" style="display: flex; flex-direction: column; align-items: center; flex-basis: 20%;">
+        <div id="selectable" *ngIf="numQuestion <= quiz.questions.length && assistance % 10 >= 1" style="display: flex; flex-direction: column; align-items: center; flex-basis: 20%;">
             <img id="hint" src="/assets/hint.png" alt="hint" (click)="useHint()">
             <h2 id="hint-text">Aide</h2>
         </div>
-        <div *ngIf="numQuestion <= quiz.questions.length && assistance % 100 >= 10" style="display: flex; flex-direction: column; align-items: center; flex-basis: 20%;">
+        <div id="selectable" *ngIf="numQuestion <= quiz.questions.length && assistance % 100 >= 10" style="display: flex; flex-direction: column; align-items: center; flex-basis: 20%;">
             <img id="sound-img" src="/assets/sound.png" alt="sound" (click)="useSound()">
             <h2 id="sound-text">Écouter la question</h2>
         </div>
