--- a/front-end/src/app/answer/answer.component.scss
+++ b/front-end/src/app/answer/answer.component.scss
@@ -28,13 +28,13 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 80px;
     margin-bottom: 80px;
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 350px;
+    max-height: 350px;
 }
 
 #user-img {
     max-width: 150px;
     max-height: 150px;
+    border-radius: 50%;
 }
