--- a/front-end/src/app/questions/play-question/play-question.component.scss
+++ b/front-end/src/app/questions/play-question/play-question.component.scss
@@ -1,16 +1,15 @@
 @import "../../../styles.scss";
-h1 {
-    margin-top: 40px;
+
+h1{
 }
 
 .answer {
-    max-width: 400px;
-    max-height: 400px;
-    margin: 10px;
+    max-width: 300px;
+    max-height: 300px;
     object-fit: cover;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top: 50px;
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 20px;
 }
 
 
