--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.scss
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.scss
@@ -16,7 +16,6 @@ span {
 
 #next-question-button {
     display: none;
-    margin-top: 10px;
     width:400px;
     height: 100px;
     border-radius:25px;
@@ -25,22 +24,23 @@ span {
 
 app-question-choice {
     width : 100%;
-    height : 70%;
+    height : 80%;
     align-self: center;
 }
 
 #hint {
-    max-height: 150px;
-    max-width: 150px;
+    max-height: 100px;
+    max-width: 100px;
 }
 
 #sound-img {
-    max-width: 150px;
-    max-height: 150px;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 #user-img {
     max-width: 150px;
     max-height: 150px;
     margin-left: 10px;
+    border-radius: 50%;
 }
