--- a/front-end/src/app/questions/play-question/play-question.component.html
+++ b/front-end/src/app/questions/play-question/play-question.component.html
@@ -1,11 +1,11 @@
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
-    <div style="display:flex; flex-direction: row; justify-content: space-between; width:100%">
-        <div style="display:flex;flex-direction: column; align-items: center; justify-content: flex-start;" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
+    <div style="display:flex; flex-direction: row; width:100%">
+        <div style="flex: 1;display: flex;justify-content:left;display:flex;flex-direction: column; align-items: center;" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/play">
             <img src="/assets/home.png" alt="home-img" id="home">
             <h2 style="align-self: center;">Accueil</h2>
         </div>
-        <h1>{{quiz.questions[numQuestion-1].label}}</h1>
-        <div style="display:flex;flex-direction: column; align-items: center; justify-content: flex-start;" (click)="goToNextQuestion()">
+        <h1 style="text-align:center;flex: 1;display: flex;justify-content: center;">{{quiz.questions[numQuestion-1].label}}</h1>
+        <div style="margin-left:100px;justify-content:right;flex: 1;display: flex; display:flex;flex-direction: column; align-items: center; " (click)="goToNextQuestion()">
             <img src="/assets/next.png" alt="next-img" id="next">
             <h2 style="align-self: center;">Question Suivante</h2>
         </div>
@@ -13,6 +13,7 @@
     <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:80%;">
         <div *ngFor="let answer of question.answers; let i=index">
             <div style="display:flex; flex-direction:column; align-items: center;">
+                <div *ngIf="answer.value != null">{{answer.value}}</div>
                 <img id="selectable" class="answer" alt="answer-{{i+1}}" src="{{answer.img}}" (click)="check(i+1)" 
                 [ngClass]="{'correct-answer': answer.isCorrect && assistance % 1000 > 100}">
             </div>
