--- a/front-end/src/app/questions/play-question/play-question.component.scss
+++ b/front-end/src/app/questions/play-question/play-question.component.scss
@@ -1,15 +1,16 @@
 @import "../../../styles.scss";
 
 h1{
+    margin:0px;
 }
 
 .answer {
-    max-width: 300px;
-    max-height: 300px;
-    object-fit: cover;
+    max-width: 275px;
+    max-height: 275px;
+    object-fit: contain;
     margin-left: 80px;
     margin-right: 80px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 
@@ -23,6 +24,7 @@ h1{
     max-height: 100px;
     max-width: 100px;
     margin-right: 10px;
+    margin-top:20px;
 }
 
 #next {
