refactor: quiz editor with better css and html. #101

--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -25,7 +25,7 @@
 </div>
 <div style="display:flex; justify-content: center;">
     <div>
-        <img *ngIf = "numQuestion <= quiz.questions.length" id="answer-img" alt="answer-{{correctAnswer+1}}" src="{{quiz.questions[numQuestion-1].answers[correctAnswer].img}}">
+        <img *ngIf = "numQuestion <= quiz.questions.length" onerror="this.style.display='none'" id="answer-img" alt="answer-{{correctAnswer+1}}" src="{{quiz.questions[numQuestion-1].answers[correctAnswer].img}}">
         <h2 style="text-align: center;">{{quiz.questions[numQuestion-1].answers[correctAnswer].value}}</h2>
     </div>
     <div *ngIf="numQuestion > quiz.questions.length" class="answer-text">
