--- a/front-end/src/app/questions/play-question/play-question.component.html
+++ b/front-end/src/app/questions/play-question/play-question.component.html
@@ -12,9 +12,9 @@
     </div>
     <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:80%;">
         <div *ngFor="let answer of question.answers; let i=index">
-            <div style="display:flex; flex-direction:column; align-items: center;">
-                <div *ngIf="answer.value != null">{{answer.value}}</div>
-                <img id="selectable" class="answer" alt="answer-{{i+1}}" src="{{answer.img}}" (click)="check(i+1)" 
+            <div id="selectable" style="display:flex; flex-direction:column; align-items: center;">
+                <button class="button-card" style="font-size: 14px;" *ngIf="answer.value != null" (click)="check(i+1)">{{answer.value}}</button>
+                <img *ngIf="answer.img != ''" class="answer" alt="answer-{{i+1}}" src="{{answer.img}}" (click)="check(i+1)" 
                 [ngClass]="{'correct-answer': answer.isCorrect && assistance % 1000 > 100}">
             </div>
         </div>
