--- a/front-end/src/app/questions/question-form/question-form.component.html
+++ b/front-end/src/app/questions/question-form/question-form.component.html
@@ -1,10 +1,19 @@
-<button class="back-button" routerLink="/edit-quiz/{{this.themeId}}/{{this.quizId}}">Retour</button><br>
-<div class="card" style="max-width: fit-content;">
+<div class="top">
+<div style="display: flex; flex-direction: column; justify-content: space-between; align-items: center;">
+  <img id="back" src="/assets/back.png" alt="back" routerLink="/edit-quiz/{{this.themeId}}/{{this.quizId}}">
+  <h2 style="color:gray">Retour</h2>
+</div>
+  <div style="margin-right: 20px;">
+    <img style="width: 100px; height: 100px;" src="/assets/edit.png" alt="edit">
+    <h3 style="text-align: center; max-width: 100px;">Éditeur de Quiz</h3>
+  </div>
+</div>
+<div class="card" style="max-width: fit-content;top: 50%;left: 50%;transform: translate(-50%,-50%); position:fixed">
   <h2>Créer nouvelle question</h2>
   <form class="quiz-form" [formGroup]="questionForm">
     <label for="label">
       Question :
-      <input class="input-text" type="text" id="label" [formControlName]="'label'" maxlength="50">
+      <input class="input-text" type="text" id="label" [formControlName]="'label'" maxlength="30">
     </label>
     <button style= "margin: 10px;" class="button-card" [disabled]="this.questionForm.get('answers').value.length >= 4" (click)="addAnswer()">Ajouter réponse</button>
     <div class="answer" formArrayName="answers">
@@ -12,7 +21,7 @@
         <div class="answer-form" [formGroupName]="i">
           <label>
             Réponse {{i + 1}} :
-            <input class = "input-text" type="text" [formControlName]="'value'" maxlength="25"><br>
+            <input class = "input-text" type="text" [formControlName]="'value'" maxlength="20"><br>
             Bonne réponse :
             <input style="margin: 10px; width: 20px; height: 20px;" class = "input" type="checkbox" [formControlName]="'isCorrect'">
             Lien d'image :
