--- a/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
+++ b/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
@@ -7,9 +7,9 @@
         <img id="selectable" src="/assets/folder.png" class="add-theme">
         <h2>Créer thème</h2>
     </div>
-    <div>
+    <div style="margin-right: 20px;">
         <img style="width: 100px; height: 100px;" src="/assets/edit.png" alt="edit">
-        <h3>PolyQuiz Editor</h3>
+        <h3 style="text-align: center; max-width: 100px;">Éditeur de Quiz</h3>
     </div>
 </div>
 <hr>
