--- a/front-end/src/app/answer/answer.component.html
+++ b/front-end/src/app/answer/answer.component.html
@@ -3,7 +3,7 @@
         <img id="quiz-img" src="{{quiz.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="quiz-img">
         <div style="display: flex; flex-direction: column; margin-left: 16px;">
             <h4 style="margin:0">{{quiz.name}}</h4>
-            <span style="margin: 0; font-size: 20px;">Question {{numQuestion}}/{{this.quizQuestions.length}}</span>
+            <span style="margin: 0; font-size: 20px;">Question {{numQuestion}}/{{this.quizQuestions.length + this.quizAssociations.length}}</span>
         </div>
     </div>
     <div style="display: flex;  align-items: center; justify-content: flex-end;">
@@ -24,9 +24,9 @@
     <h1 class="answer-text">La bonne réponse est :</h1>
 </div>
 <div style="display:flex; justify-content: center;">
-    <img *ngIf = "numQuestion <= quiz.questions.length" id="answer-img" alt="answer-{{correctAnswer+1}}" src="{{quiz.questions[numQuestion-1].answers[correctAnswer].img}}">
-    <div *ngIf="numQuestion > quiz.questions.length" class="answer-text">
-        <div style="display: inline-block; margin: 20px;" *ngFor = "let connection of quiz.associations[numQuestion - quiz.questions.length - 1].connections; let i=index;">
+    <img *ngIf = "numQuestion <= this.quizQuestions.length" id="answer-img" alt="answer-{{correctAnswer+1}}" src="{{this.answers[correctAnswer].img}}">
+    <div *ngIf="numQuestion > this.quizQuestions.length" class="answer-text">
+        <div style="display: inline-block; margin: 20px;" *ngFor = "let connection of this.connections; let i=index;">
             <div class="card" style="margin: 10px;" *ngIf="connection.valueToConnect && connection.valueToBeConnected">
                 <div style="margin-top: 10px;">
                     {{connection.valueToConnect}}
