--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
@@ -16,5 +16,5 @@
 
 <img id="quiz-img" src="{{quiz.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="quiz-img">
 <h2 id="quiz-name">{{quiz.name}}</h2>
-<span id="nb-of-question">{{quizQuestions.length}} questions</span>
+<span id="nb-of-question">{{quizQuestions.length + quizAssociations.length}} questions</span>
 <button id="start-quiz-button" routerLink="/play-quiz/{{quiz.id}}/{{0}}/{{1}}/{{user.id}}" (click)="createSession()">Démarrer le quiz</button>
