--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -7,8 +7,8 @@
         <img src="{{this.quiz.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" style="border-radius: 44px; margin-right:20px">
         <div>
         Titre : {{this.quiz.name}}<br>
-        Nombre de questions : {{this.quiz.questions.length}}<br>
-        Nombre d'associations : {{this.quiz.associations.length}}<br>
+        Nombre de questions : {{this.quizQuestions.length}}<br>
+        Nombre d'associations : {{this.quizAssociations.length}}<br>
         <div *ngIf="this.quiz.users.length > 0">
             Nombre de patients attribués : {{this.quiz.users.length}}<br>
         </div>
@@ -37,7 +37,7 @@
         <p style="color:gray">Cliquez sur l'icône pour ajouter un patient</p>
         <div style="display: flex; flex-direction: row;">
             <img class="user-img" src="/assets/users/add-user.png" alt="add-user-img" (click)="displayUserToAdd()">
-            <div *ngFor="let user of this.userList" style="display: flex; flex-direction: column; margin-left: 15px; margin-right: 15px; align-items: center;">
+            <div *ngFor="let user of this.userListQuiz" style="display: flex; flex-direction: column; margin-left: 15px; margin-right: 15px; align-items: center;">
                 <img class="user-img" src="{{this.user.photo}}" onerror="this.onerror=null; this.src='/assets/users/user.png'" alt="user-img" (click)="removeUserToQuiz(user)">
                 <p style="display: flex; justify-content: center; align-self: center; max-width: 100px;">{{user.firstName}} {{user.lastName}}</p>
             </div>
