fix: button highliting for appropriate user in play question. #101

--- a/front-end/src/app/quizzes/play-association/play-association.component.scss
+++ b/front-end/src/app/quizzes/play-association/play-association.component.scss
@@ -34,9 +34,15 @@ svg {
     padding: 0.5em 1em;
 }
 
+.validate-button:disabled {
+    color: #a4a4a4;
+    border: solid 1px #989898;
+    cursor: not-allowed;
+}
+
 #home {
-    max-height: 100px;
-    max-width: 100px;
+    max-height: 75px;
+    max-width: 75px;
     margin-right: 10px;
 }
 
@@ -51,8 +57,8 @@ svg {
 }
 
 #next {
-    max-height: 100px;
-    max-width: 100px;
+    max-height: 75px;
+    max-width: 75px;
     margin-left: 10px;
 }
 
