--- a/front-end/src/app/caregiver/user-management/user-management.component.html
+++ b/front-end/src/app/caregiver/user-management/user-management.component.html
@@ -29,7 +29,7 @@
         <div *ngIf="user.photo!==''">
 
             <img id="selectable" class="user-img" alt="user-img-{{user.firstName}}-{{user.lastName}}" src={{user.photo}} routerLink="/user-stats-menu/{{user.id}}">
-            <img class="trash" src="/assets/trash.png" alt="trash-img" (click)="delete(user)">
+            <img id="selectable" class="trash" src="/assets/trash.png" alt="trash-img" (click)="delete(user)">
         </div>
         <div *ngIf="user.photo===''">
             <img class="user-img" alt="user-img" src="/assets/users/user.png" routerLink="/user-stats-menu/{{user.id}}">
