--- a/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
+++ b/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
@@ -17,11 +17,11 @@
 <div style="display: flex; flex-direction: rox; justify-content: space-between; margin-top: 100px;">
     <div></div>
     <div routerLink="/user-edit/{{user.id}}">
-        <img src="/assets/parameters.png" alt="parameters">
+        <img src="/assets/parameters.png" alt="parameters" id="selectable">
         <h1>Gérer l'utilisateur</h1>
     </div>
     <div routerLink="/user-stats/{{user.firstName}}-{{user.lastName}}">
-        <img src="/assets/stats.png" alt="stats">
+        <img src="/assets/stats.png" alt="stats" id="selectable">
         <h1>Voir les statistiques</h1>
     </div>
     <div></div>
