fix: lots of fixes.

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
@@ -6,6 +6,11 @@
     border-radius: 50%;
 }
 
+.add-user-img{
+  width:75px;
+  height:75px;
+}
+
 .top {
     margin-top: 10px;
     display: flex;
