--- a/front-end/src/app/quizzes/final-screen/final-screen.component.html
+++ b/front-end/src/app/quizzes/final-screen/final-screen.component.html
@@ -12,9 +12,9 @@
 </div>
 
 <div id="result" style="align-items: center; align-content: center; text-align: center;">
-    <h1>Félicitations</h1>
-    <h2>vous avez terminé le quiz !</h2>
-    <h2>Vous avez réussi : {{score}}/{{this.quizQuestions.length + this.quizAssociations.length}} questions</h2>
+    <h1 class="title">Félicitations</h1>
+    <h2>Vous avez terminé le quiz !</h2>
+    <h2>Vous avez réussi {{score}} sur {{this.quizQuestions.length + this.quizAssociations.length}} questions</h2>
 </div>
 
 <div id="goHome">
