--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.html
@@ -17,8 +17,6 @@
 <img id="quiz-img" src="{{quiz.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="quiz-img">
 <h2 id="quiz-name">{{quiz.name}}</h2>
 <span id="nb-of-question">{{quizQuestions.length + quizAssociations.length}} questions</span>
-<button id="start-quiz-button" routerLink="/play-quiz/{{quiz.id}}/{{0}}/{{1}}/{{user.id}}" (click)="createSession()">Démarrer le quiz</button>
+<button id="start-quiz-button" *ngIf="quizQuestions.length + quizAssociations.length > 0" routerLink="/play-quiz/{{quiz.id}}/{{0}}/{{1}}/{{user.id}}" (click)="createSession()">Démarrer le quiz</button>
 <span *ngIf="this.quizQuestions.length+ this.quizAssociations.length > 0" id="nb-of-question">{{quiz.questions.length+ quiz.associations.length}} questions</span>
 <span *ngIf="this.quizQuestions.length+ this.quizAssociations.length <= 0" id="nb-of-question">Ce quiz ne contient pas encore de questions.</span>
-
-<button *ngIf="quiz.questions.length+ quiz.associations.length > 0" id="start-quiz-button" routerLink="/play-quiz/{{quiz.id}}/{{0}}/{{1}}/{{user.id}}" (click)="createSession()">Démarrer le quiz</button>
