--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -35,8 +35,8 @@
     <div style="max-width: 500px; min-width: 400px;">
         <h3>Patients attribués :</h3>
         <p style="color:gray">Cliquez sur l'icône pour ajouter un patient</p>
-        <div style="display: flex; flex-direction: row;">
-            <img id="selectable" class="user-img" src="/assets/users/add-user.png" alt="add-user-img" (click)="displayUserToAdd()">
+        <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
+            <img id="selectable" class="add-user-img" src="/assets/users/add-user.png" alt="add-user-img" (click)="displayUserToAdd()">
             <div *ngFor="let user of this.userListQuiz" style="display: flex; flex-direction: column; margin-left: 15px; margin-right: 15px; align-items: center;">
                 <img id="selectable" class="user-img" src="{{this.user.photo}}" onerror="this.onerror=null; this.src='/assets/users/user.png'" alt="user-img" (click)="removeUserToQuiz(user)">
                 <p style="display: flex; justify-content: center; align-self: center; max-width: 100px;">{{user.firstName}} {{user.lastName}}</p>
