--- a/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
+++ b/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
@@ -19,7 +19,7 @@
     <div *ngFor="let theme of themeList, let i=index">
         <div class="theme">
             <div>
-                <img id="selectable" class="theme-img" src="{{theme.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="theme-{{theme.id}}" (click)="goToTheme(theme.id)">
+                <img id="selectable" class="theme-img" src="{{theme.coverImage}}" onerror="this.onerror=null; this.src='/assets/quiz-img/default.png'" alt="theme-{{theme.title}}" (click)="goToTheme(theme.id)">
                 <img id="selectable" src="/assets/trash.png" alt="trash-img" (click)="deleteTheme(theme)">
             </div>
             <h2 style="display: flex; justify-content: center; margin-right: 80px;">{{theme.title}}</h2>
