--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
@@ -3,7 +3,12 @@
 .user-img {
     max-width: 175px;
     max-height: 175px;
+    min-width: 175px;
+    min-height: 175px;
+    width: 100%;
     border-radius: 50%;
+    margin-bottom: 10px;
+    object-fit: cover;
 }
 
 .user-list {
