--- a/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.scss
+++ b/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.scss
@@ -23,10 +23,15 @@ hr {
 }
 
 #user-img {
-    max-width: 150px;
-    max-height: 150px;
-    margin-left: 16px;
+    max-width: 175px;
+    max-height: 175px;
+    min-width: 175px;
+    min-height: 175px;
+    width: 100%;
     border-radius: 50%;
+    margin-bottom: 10px;
+    object-fit: cover;
+    margin: 20px;
 }
 
 #selectable:hover{
