--- a/front-end/src/app/home/home.component.scss
+++ b/front-end/src/app/home/home.component.scss
@@ -1,4 +1,5 @@
 #title {
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,13 +7,18 @@
 }
 
 #title h1 {
-    font-size: 100px;
+    font-size: 90px;
     color: white;
+    font-style: bold;
+    text-shadow: 10px 0px 0px  rgb(38, 38, 112);
 }
 
-#title h2 {
-    font-size: 80px;
+#title h3 {
+    font-size: 50px;
     color:white;
+    font-style: italic;
+    margin-bottom: 80px;
+    margin-top: 0px;
 }
 
 #button-container {
@@ -43,3 +49,19 @@
     height: 150px;
     font-size: 42px;
 }
+
+.button-grow {
+    color: black;
+    background-color: rgb(98, 165, 241);
+    border: 0;
+    border-radius: 25px;
+    width: 500px;
+    height: 150px;
+    font-size: 42px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .button-grow:hover {
+    transform: scale(1.1);
+  }
