--- a/front-end/src/app/quizzes/theme-list/theme-list.component.scss
+++ b/front-end/src/app/quizzes/theme-list/theme-list.component.scss
@@ -3,7 +3,12 @@
 #user-img {
     max-width: 150px;
     max-height: 150px;
+    min-width: 150px;
+    min-height: 150px;
+    width: 100%;
     border-radius: 50%;
+    margin-bottom: 10px;
+    object-fit: cover;
 }
 
 #back {
