--- a/front-end/src/app/users/user-edit/user-edit.component.scss
+++ b/front-end/src/app/users/user-edit/user-edit.component.scss
@@ -62,7 +62,12 @@ input {
 #user-img {
     max-width: 200px;
     max-height: 200px;
+    min-width: 200px;
+    min-height: 200px;
+    width: 100%;
     border-radius: 50%;
+    margin-bottom: 10px;
+    object-fit: cover;
 }
 
 .edit-user-button {
