feat: css on oither photos to fit cover.

--- a/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
+++ b/front-end/src/app/quizzes/play-quiz/play-quiz.component.html
@@ -22,6 +22,8 @@
             </div>
         </div>
     </div>
+    <hr style="margin:10px;height:.5px;background-color: rgb(46, 46, 46); width:100%">
+
     <app-play-association *ngIf="numQuestion > quiz.questions.length" (nextQuestion)="goToNextQuestion()" (answer)="checkAssociation($event)" [numAssociation] = "numQuestion - quiz.questions.length - 1" [user]="user"></app-play-association>
     <app-play-question *ngIf="numQuestion <= quiz.questions.length" (nextQuestion)="goToNextQuestion()" (answer)="check($event)" [quiz]="quiz" [numQuestion]="numQuestion" [assistance]="assistance" [user]="user"></app-play-question>
 </div>
