--- a/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
+++ b/front-end/src/app/quizzes/start-quiz/start-quiz.component.scss
@@ -30,11 +30,13 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 25%;
-    height: auto;
-    max-width: 500px;
-    max-height: 500px;
+    width: 100%;
+    max-width: 300px;
+    max-height: 300px;
+    min-width: 300px;
+    min-height: 300px;
     border-radius: 50px;
+    object-fit: cover;
 }
 
 #nb-of-question {
@@ -86,4 +88,14 @@
     margin: 0;
     color: black;
 }
-  
+
+.user-img {
+    max-width: 175px;
+    max-height: 175px;
+    min-width: 175px;
+    min-height: 175px;
+    width: 100%;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    object-fit: cover;
+}
