feat: css user management and profil choice.

--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.html
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.html
@@ -3,12 +3,13 @@
         <img id="back" src="/assets/back.png" alt="back" routerLink="/home">
         <h2>Retour</h2>
     </div>
-    <div style="display: flex; flex-basis: 90%; flex-direction: column; margin-top: 100px;">
-        <h1 style="display: flex; justify-content: center; align-self: center;">Cliquer sur la photo de vous</h1>
-        <h1 style="display: flex; justify-content: center; align-self: center;">avec votre nom</h1>
+    <div style="display: flex; flex-basis: 90%; flex-direction: column; margin-top: 50px;">
+        <h1 style="font-size: 58px; display: flex; justify-content: center; align-self: center;">Cliquer sur la photo de vous</h1>
+        <h1 style="font-size: 58px; display: flex; justify-content: center; align-self: center;">avec votre nom</h1>
     </div>
     <div style="display: flex; flex-basis: 5%;"></div>
 </div>
+<hr style="border:none;height:2px;background-color: black; width:70%">
 
 <div class="user-list">
     <div *ngFor="let user of userList" class="user">
