--- a/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
+++ b/front-end/src/app/home-profil-choice/home-profil-choice.component.scss
@@ -9,7 +9,13 @@
     border-radius: 50%;
     margin-bottom: 10px;
     object-fit: cover;
+    transition: all 0.3s ease-in-out;
 }
+  
+.user-img:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 5px 5px  rgb(49, 49, 49);
+  }
 
 .user-list {
     display: flex;
