feat: caregiver home page with quiz editor and users splited.

--- a/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
+++ b/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
@@ -1,6 +1,6 @@
 <div class="top">
     <div style="display: flex; flex-direction: column; justify-content: space-between; align-items: center;">
-        <img id="back" src="/assets/back.png" alt="back" routerLink="/user-management">
+        <img id="back" src="/assets/back.png" alt="back" routerLink="/caregiver-home">
         <h2 style="color:gray">Retour</h2>
     </div>
     <div class="button-div" (click)="createTheme()" style="display: flex; flex-direction: column; align-items: center;">
