--- a/front-end/src/app/caregiver/caregiver-home/caregiver-home.component.scss
+++ b/front-end/src/app/caregiver/caregiver-home/caregiver-home.component.scss
@@ -18,9 +18,10 @@
     background-color: rgb(98, 165, 241);
     border: 0;
     border-radius: 25px;
-    width: 200px;
-    height: 100px;
-    font-size: 28px;
+    width: 350px;
+    height: 200px;
+    font-size: 38px;
+    gap:20px;
     padding:1%;
     align-items: center;
     text-align: center;
@@ -75,10 +76,6 @@
     font-size: 24px;
 }
 
-#editor-button:hover {
-    background-color: grey;
-    color: white;
-}
 
 .button-div {
     margin:30px;
@@ -89,10 +86,6 @@
     border-radius: 22px;
 }
 
-.button-div:hover {
-    background-color: grey;
-    color: white;
-}
 
 .trash {
     width: 50px;
@@ -101,4 +94,13 @@
 
 h2{
     text-align: center;
+}
+
+.body{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 200px;
 }
