--- a/front-end/src/app/quizzes/play-association/play-association.component.scss
+++ b/front-end/src/app/quizzes/play-association/play-association.component.scss
@@ -6,9 +6,10 @@
     flex-direction: row;
     justify-content: space-between;
     max-height: 60%;
-    max-width: 50%;
+    width: 50%;
     top:35%;
     position: absolute;
+    margin-top: 30px;
 
 }
 
