--- a/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
+++ b/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
@@ -16,16 +16,16 @@
     <div class="content">
       <div class="info">
         <h2 *ngIf="type==='global'">Nombre de tentatives : {{this.numberTry}}</h2>
-        <h2 *ngIf="this.lastGame===0 && type==='global'">Dernière partie : Aujourd'hui</h2>
-        <h2 *ngIf="this.lastGame===1 && type==='global'">Dernière partie: Il y a 1 jour</h2>
-        <h2 *ngIf="this.lastGame>1 && type==='global'">Dernière partie: Il y a {{this.lastGame}} jours</h2>
-        <h2 *ngIf="type==='global'"><span class="underline" (click)="showHelp('progression')">Progression</span>: <span [ngClass]="{'positive': this.progression > 0, 'negative': this.progression < 0}">{{this.progression}}%</span></h2>
-        <h2 *ngIf="type==='date'"><span class="underline" (click)="showHelp('error')">Similitude d'erreur</span>: <span [ngClass]="{'positive': errorSimilarity < 50, 'negative': errorSimilarity > 50}">{{errorSimilarity}}%</span></h2>
-        <h2 *ngIf="type==='global'"><span class="underline" (click)="showHelp('globalError')">Similitude d'erreur</span>: <span [ngClass]="{'positive': globalErrorSimilarity < 50, 'negative': globalErrorSimilarity > 50}">{{globalErrorSimilarity}}%</span> (<span (click)="showProblematicQuestions()" class="underline">voir questions problématiques</span>)</h2>
-        <h2 *ngIf="type==='global'"><span class="underline" (click)="showHelp('time')">Temps moyen par question</span>: {{meanTime}}s (<span [ngClass]="{'positive':timeProgression < 0, 'negative':timeProgression > 0}">{{timeProgression}}s</span>)</h2>
+        <h2 *ngIf="this.lastGame===0 && type==='global' && this.numberTry > 0">Dernière partie : Aujourd'hui</h2>
+        <h2 *ngIf="this.lastGame===1 && type==='global' && this.numberTry > 0">Dernière partie: Il y a 1 jour</h2>
+        <h2 *ngIf="this.lastGame>1 && type==='global' && this.numberTry > 0">Dernière partie: Il y a {{this.lastGame}} jours</h2>
+        <h2 id="selectable"*ngIf="type==='global'"><span class="underline" (click)="showHelp('progression')">Progression</span>: <span (click)="showHelp('progression')" [ngClass]="{'positive': this.progression > 0, 'negative': this.progression < 0}">{{this.progression}}%</span></h2>
+        <h2 id="selectable" *ngIf="type==='date'"><span class="underline" (click)="showHelp('error')">Similitude d'erreur</span>: <span (click)="showHelp('error')" [ngClass]="{'positive': errorSimilarity < 50, 'negative': errorSimilarity > 50}">{{errorSimilarity}}%</span></h2>
+        <h2 id="selectable" *ngIf="type==='global'"><span class="underline" (click)="showHelp('globalError')">Similitude d'erreur</span>: <span (click)="showHelp('globalError')" [ngClass]="{'positive': globalErrorSimilarity < 50, 'negative': globalErrorSimilarity > 50}">{{globalErrorSimilarity}}%</span> (<span (click)="showProblematicQuestions()" class="underline">voir questions problématiques</span>)</h2>
+        <h2 id="selectable" *ngIf="type==='global' && this.numberTry > 0"><span class="underline" (click)="showHelp('time')">Temps moyen par question</span>: {{meanTime}}s (<span (click)="showHelp('time')"[ngClass]="{'positive':timeProgression < 0, 'negative':timeProgression > 0}">{{timeProgression}}s</span>)</h2>
       </div>
       <div class="chart">
-        <select (change)="updateChart($event.target.value)" style="border-radius: 5px; padding: 10px;">
+        <select id="selectable" (change)="updateChart($event.target.value)" style="width:300px; height:50px;border-radius: 5px; padding: 10px;">
           <option value="Global">Global</option>
           <option *ngFor="let date of dates" value="{{date}}">{{date}}</option>
         </select>
@@ -33,4 +33,3 @@
       </div>
     </div>
 </div>
-  
